# ransomware-c2

./: .gitignore  README.md  c2.py  pyproject.toml
