[tool.poetry]
name = "ransomware-c2"
version = "0.1.0"
description = "C2 server for the FileYeeter 3000 PoC ransomware"
authors = ["Sam van der Kris <samvdkris@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
bottle = "^0.12.18"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
